# ark-pragmaticstress

./: .gitignore  LICENSE  README.md  REFERENCES.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: directness_vs_language.md
ark_pragmaticstress/: __init__.py
ark_pragmaticstress/agents/: __init__.py  baseline_agent.py  openai_agent.py  (+5 more)
configs/: llm_full.yaml  llm_naive_compare_retail.yaml  llm_naive_compare_subscription.yaml  llm_smoke.yaml  mvp_retail.yaml  smoke.yaml
data/: source_corpora.md
docs/: annotation_guidelines.md  calibration_protocol.md  limitations.md  minimal_pair_examples.md  persona_taxonomy.md  project_one_pager.md  project_summary_for_research.md  related_work.md  resume_bullets.md  reviewers.md
evaluation/: compute_calibration.py
results/: calibration_report.md  directness_analysis.md  evaluator_audit.md  mvp_retail_breakdown.csv  mvp_retail_breakdown.md  mvp_retail_conversations.jsonl  mvp_retail_findings.md  mvp_retail_metrics.json  mvp_retail_policy_violation_gaps.md  smoke_conversations.jsonl  smoke_metrics.json
scenarios/: education_advising.yaml  retail_late_delivery.yaml  retail_price_adjustment.yaml  retail_refund.yaml  retail_warranty_exception.yaml  subscription_annual_plan_exception.yaml  subscription_cancellation.yaml  subscription_duplicate_charge.yaml  subscription_retention_discount.yaml
scripts/: analyze_ranking_reliability.py  analyze_retail_reliability.py  analyze_subscription_reliability.py  make_breakdown.py  rename_agent_labels.py
tests/: test_metrics.py  test_personas.py  test_regression.py
(+32 files in other folders)
